# wAppRustTemplate

./: .gitignore  Cargo.toml  README.md  build.py  build.sh  fuck.c  fuck.js
.cargo/: config.toml
src/: app.rs  applib.rs  main.rs  utils.rs
