cargo-features = ["profile-rustflags"]
[package]
name = "wApp"
version = "0.1.1"
edition = "2021"
authors = ["https://github.com/W-Mai"]
repository = "https://github.com/W-Mai/wAppRustTemplate"


[[bin]]
name = "app"
path = "src/app.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm_allocator = { git = "https://github.com/W-Mai/wasm_allocator", rev = "98e6728c" }

# 使用`cargo build`编译时需要的配置
[profile.dev]
panic = "abort" # 禁用panic时栈展开

# 使用`cargo build --release`编译时需要的配置
[profile.release]
panic = "abort" # 禁用panic时栈展开
opt-level = 3
strip = true
lto = true
rustflags = [
    "-C", "link-arg=--global-base=0",
    "-C", "link-arg=-zstack-size=2048",
]
