cargo-features = ["profile-rustflags"]

[package]
name = "wApp"
version = "0.1.1"
edition = "2021"
authors = ["https://github.com/W-Mai"]
repository = "https://github.com/W-Mai/wAppRustTemplate"


[[bin]]
name = "app"
path = "src/app.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm_allocator = "0.1.1"
xwrapup_rs = { git = "https://github.com/W-Mai/xwrapup_rs", rev = "4073bd77134780ea95e44de945d53372a97bd792"}

# 使用`cargo build`编译时需要的配置
[profile.dev]
panic = "abort" # 禁用panic时栈展开

# 使用`cargo build --release`编译时需要的配置
[profile.release]
panic = "abort" # 禁用panic时栈展开
opt-level = 3
strip = true
lto = true
